--- a/News.html
+++ b/News.html
@@ -6,7 +6,7 @@
 <title>News</title>
 <style>
     /* Stili per il div grigio */
-    .blurred-background {
+    .blurred{
     position: absolute;
     width: 100%;
     height: 100%;
