--- a/News.html
+++ b/News.html
@@ -21,7 +21,7 @@
 </style>
 </head>
 <body>
-<div class="blurred-background">
+<div class="blurred">
     <div id="gray-div-content">
         <!-- Qui inserisci il tuo contenuto -->
         <h1>Ultime notizie</h1>
