--- a/News.html
+++ b/News.html
@@ -7,7 +7,7 @@
 <style>
     /* Stili per il div grigio */
     .blurred{
-    position: absolute;
+    position: relative;
     width: 100%;
     height: 100%;
     background-color: rgba(79, 79, 79, 0.5);
