--- a/API.html
+++ b/API.html
@@ -1,1 +1,1 @@
-<blockquote class="instagram-media" data-instgrm-captioned data-instgrm-permalink="https://www.instagram.com/p/C4sAC91iiJo/?utm_source=ig_embed&amp;utm_campaign=loading" data-instgrm-version="14">
+<blockquote class="instagram-media" data-instgrm-captioned data-instgrm-permalink="https://www.instagram.com/p/C4sAC91iiJo/?utm_source=ig_embed&amp;utm_campaign=loading" data-instgrm-version="14" ></blockquote> <script async src="//www.instagram.com/embed.js"></script>
