--- a/API.html
+++ b/API.html
@@ -1,3 +1,4 @@
+<center>
 <blockquote class="instagram-media" data-instgrm-captioned data-instgrm-permalink="https://www.instagram.com/p/C4sAC91iiJo/?utm_source=ig_embed&amp;utm_campaign=loading" data-instgrm-version="14" ></blockquote> <script async src="//www.instagram.com/embed.js"></script>
 <blockquote class="instagram-media" data-instgrm-captioned data-instgrm-permalink="https://www.instagram.com/p/CqQ2NbYLKW8/?utm_source=ig_embed&amp;utm_campaign=loading" data-instgrm-version="14" ></blockquote> <script async src="//www.instagram.com/embed.js"></script>
 <blockquote class="instagram-media" data-instgrm-captioned data-instgrm-permalink="https://www.instagram.com/p/CaDQNiErY0A/?utm_source=ig_embed&amp;utm_campaign=loading" data-instgrm-version="14" ></blockquote> <script async src="//www.instagram.com/embed.js"></script>
@@ -12,3 +13,4 @@
 <blockquote class="instagram-media" data-instgrm-captioned data-instgrm-permalink="https://www.instagram.com/p/CFXnUcHCHj3/?utm_source=ig_embed&amp;utm_campaign=loading" data-instgrm-version="14" ></blockquote> <script async src="//www.instagram.com/embed.js"></script>
 <blockquote class="instagram-media" data-instgrm-captioned data-instgrm-permalink="https://www.instagram.com/p/CE4wvxyiDzK/?utm_source=ig_embed&amp;utm_campaign=loading" data-instgrm-version="14" ></blockquote> <script async src="//www.instagram.com/embed.js"></script>
 <blockquote class="instagram-media" data-instgrm-captioned data-instgrm-permalink="https://www.instagram.com/p/CEzVxkJp4I1/?utm_source=ig_embed&amp;utm_campaign=loading" data-instgrm-version="14" ></blockquote> <script async src="//www.instagram.com/embed.js"></script>
+</center>
