--- a/News.html
+++ b/News.html
@@ -49,7 +49,7 @@
 <body>
 <div id="blurred-center">
     <div id="white-border"> <!-- Div bianco interno -->
-        <iframe class="insta" src="https://donamattia.000webhostapp.com/Capolavoro/api.html"></iframe>
+        <iframe class="insta" src="https://donamattia.github.io/Capolavoro/api.html"></iframe>
     </div>
 </div>
 </body>
