--- a/Home.html
+++ b/Home.html
@@ -54,6 +54,7 @@
             if(isSmallScreen()) {
                 $scope.showImage = false;
             } else {
+                $scope.showImage = true;
                 if(clickedLink === 'chisono' || clickedLink === 'contatti' || clickedLink === 'news') {
                     $scope.showImage = false;
                 } else if(clickedLink === 'home'){
