--- a/Home.html
+++ b/Home.html
@@ -17,10 +17,10 @@
         <img id="logo" src="logo.png">
     <div>
         <ul class="start-menu">
-            <li><a href="#/!" ng-click="hideImage('home')">Home</a></li>
-            <li><a href="#!chisono" ng-click="hideImage('chisono')">Chi sono</a></li>
-            <li><a href="#!news" ng-click="HideImage('news')">News</a></li>
-            <li><a href="#!contatti" ng-click="hideImage('contatti')">Contatti</a></li>
+            <li><a href="#/!" ng-click="hideImage('home')">HOME</a></li>
+            <li><a href="#!chisono" ng-click="hideImage('chisono')">CHI SONO</a></li>
+            <li><a href="#!news" ng-click="HideImage('news')">NEWS</a></li>
+            <li><a href="#!contatti" ng-click="hideImage('contatti')">CONTATTI</a></li>
         </ul>
     </div>
         
