--- a/Home.html
+++ b/Home.html
@@ -85,9 +85,9 @@
 </head>
 <body ng-controller="MainController">
 <div class="container">
-    <img id="logo-grande" src="immagini/logo2.png" ng-show="showImage">
+    <img id="logo-grande" src="logo2.png" ng-show="showImage">
     <div class="blurred-background">
-        <img id="logo" src="immagini/logo.png">
+        <img id="logo" src="logo.png">
         <div>
             <ul class="start-menu">
                 <li><a href="#/!" ng-click="hideImage('home')">Home</a></li>
@@ -110,8 +110,8 @@
         </nav>
 
         <!-- Contenuto Pagina -->
-        <img id="logo-insta" src="immagini/social.png">
-        <img id="logo-yt" src="immagini/youtube.png">
+        <img id="logo-insta" src="social.png">
+        <img id="logo-yt" src="youtube.png">
     </div>
     <div id="center" ng-view></div>
 </div>
