--- a/HOME.html
+++ b/HOME.html
@@ -5,13 +5,13 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular-route.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Anton&display=swap">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style1.css">
 </head>
 <body ng-controller="MainController">
 <div class="container">
-    <img id="logo-grande" src="immagini/logo2.png" ng-show="showImage">
+    <img id="logo-grande" src="logo2.png" ng-show="showImage">
     <div class="blurred-background">
-        <img id="logo" src="immagini/logo.png">
+        <img id="logo" src="logo.png">
         <div>
             <ul class="start-menu">
                 <li><a href="#/!" ng-click="hideImage('home')">Home</a></li>
@@ -34,8 +34,8 @@
         </nav>
 
         <!-- Contenuto Pagina -->
-        <img id="logo-insta" src="immagini/social.png">
-        <img id="logo-yt" src="immagini/youtube.png">
+        <img id="logo-insta" src="social.png">
+        <img id="logo-yt" src="youtube.png">
     </div>
     <div id="center" ng-view></div>
 </div>
