--- a/HOME.html
+++ b/HOME.html
@@ -6,6 +6,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular-route.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Anton&display=swap">
     <link rel="stylesheet" href="style1.css">
+    <script src="script.js"></script>
 </head>
 <body ng-controller="MainController">
 <div class="container">
