--- a/Home.html
+++ b/Home.html
@@ -14,10 +14,10 @@
         <img id="logo" src="logo.png">
         <div>
             <ul class="start-menu">
-                <li><a href="#/!" ng-click="hideImage('home')">Home</a></li>
-                <li><a href="#!chisono" ng-click="hideImage('chisono')">Chi sono</a></li>
-                <li><a href="#!news" ng-click="hideImage('news')">News</a></li>
-                <li><a href="#!contatti" ng-click="hideImage('contatti')">Contatti</a></li>
+                <li><a href="#/!" ng-click="hideImage('home')">HOME</a></li>
+                <li><a href="#!chisono" ng-click="hideImage('chisono')">CHI SONO</a></li>
+                <li><a href="#!news" ng-click="hideImage('news')">NEWS</a></li>
+                <li><a href="#!contatti" ng-click="hideImage('contatti')">CONTATTI</a></li>
             </ul>
         </div>
         <div class="menu-icon" ng-click="toggleMenu()">
@@ -26,10 +26,10 @@
 
         <nav class="navbar" ng-class="{'show': isMenuOpen}">
             <ul>
-                <li><a href="#/!" ng-click="closeMenu()">Home</a></li>
-                <li><a href="#!chisono" ng-click="closeMenu()">Chi siamo</a></li>
-                <li><a href="#!news" ng-click="closeMenu()">Servizi</a></li>
-                <li><a href="#!contatti" ng-click="closeMenu()">Contatti</a></li>
+                <li><a href="#/!" ng-click="closeMenu()">HOME</a></li>
+                <li><a href="#!chisono" ng-click="closeMenu()">CHI SONO</a></li>
+                <li><a href="#!news" ng-click="closeMenu()">NEWS</a></li>
+                <li><a href="#!contatti" ng-click="closeMenu()">CONTATTI</a></li>
             </ul>
         </nav>
 
