--- a/Home.html
+++ b/Home.html
@@ -44,17 +44,21 @@
     var app = angular.module("myApp", ["ngRoute"]);
 
     app.controller("MainController", function($scope) {
-        $scope.showImage = true; // Imposta inizialmente showImage a true
-        $scope.isMenuOpen = false;
+    // Recupera lo stato dell'immagine da localStorage
+    var showImageStored = localStorage.getItem('showImage');
+    $scope.showImage = showImageStored === null ? true : JSON.parse(showImageStored);
 
-        // Funzione per nascondere l'immagine
-        $scope.hideImage = function(clickedLink) {
-            if (clickedLink === 'chisono' || clickedLink === 'contatti' || clickedLink === 'news') {
-                $scope.showImage = false;
-            } else if (clickedLink === 'home') {
-                $scope.showImage = true;
-            }
-        };
+    $scope.isMenuOpen = false;
+
+    // Funzione per nascondere l'immagine e salvare lo stato in localStorage
+    $scope.hideImage = function(clickedLink) {
+        if (clickedLink === 'chisono' || clickedLink === 'contatti' || clickedLink === 'news') {
+            $scope.showImage = false;
+        } else if (clickedLink === 'home') {
+            $scope.showImage = true;
+        }
+        localStorage.setItem('showImage', JSON.stringify($scope.showImage));
+    };
 
         // Funzione per aprire/chiudere il menù
         $scope.toggleMenu = function() {
