--- a/News.html
+++ b/News.html
@@ -59,7 +59,7 @@
 
     #white-border {
         width: 90%; /* Aumenta la larghezza per utilizzare più spazio disponibile */
-        height: auto; /* Permetti al contenitore di adattarsi al contenuto */
+        height: 90%; /* Permetti al contenitore di adattarsi al contenuto */
         border-radius: 20px; /* Riduci il raggio del bordo */
         padding: 5px; /* Riduci il padding */
     }
