--- a/News.html
+++ b/News.html
@@ -55,6 +55,7 @@
         font-size: 4vw; /* Riduci il font-size all'interno di #blurred-center */
         border-radius: 25px; /* Riduci il raggio del bordo per adattarsi meglio agli schermi piccoli */
         padding: 5px; /* Riduci il padding */
+        height: 100%;
     }
 
     #white-border {
