--- a/News.html
+++ b/News.html
@@ -55,7 +55,7 @@
         font-size: 4vw; /* Riduci il font-size all'interno di #blurred-center */
         border-radius: 25px; /* Riduci il raggio del bordo per adattarsi meglio agli schermi piccoli */
         padding: 5px; /* Riduci il padding */
-        height: auto; /* Permetti l'altezza automatica */
+        height: 70%; /* Permetti l'altezza automatica */
     }
 
     #white-border {
