--- a/News.html
+++ b/News.html
@@ -59,8 +59,8 @@
     }
 
     #white-border {
-        width: 90%; /* Aumenta la larghezza per utilizzare più spazio disponibile */
-        height: auto; /* Permetti al contenitore di adattarsi al contenuto */
+        width: 100%; /* Aumenta la larghezza per utilizzare più spazio disponibile */
+        height: 100%; /* Permetti al contenitore di adattarsi al contenuto */
         min-height: 50vh; /* Imposta un'altezza minima per evitare che diventi troppo stretto */
         border-radius: 20px; /* Riduci il raggio del bordo */
         padding: 5px; /* Riduci il padding */
