--- a/News.html
+++ b/News.html
@@ -56,6 +56,7 @@
         border-radius: 25px; /* Riduci il raggio del bordo per adattarsi meglio agli schermi piccoli */
         padding: 5px; /* Riduci il padding */
         height: 70%; /* Permetti l'altezza automatica */
+        background-color: white;
     }
 
     #white-border {
