--- a/api.html
+++ b/api.html
@@ -6,8 +6,8 @@
 <title>Pagina all'interno dell'iframe</title>
 <link rel="stylesheet" href="style.css">
 </head>
-  <style>
-    /* Stili per WebKit-based browsers (Chrome, Safari) */
+<style>
+/* Stili per WebKit-based browsers (Chrome, Safari) */
 body::-webkit-scrollbar {
     width: 8px; /* Larghezza della scrollbar */
     height: 8px; /* Altezza della scrollbar */
@@ -30,6 +30,7 @@ body::-webkit-scrollbar-button {
 /* Rimuovi le frecce della barra di scorrimento per Firefox */
 body {
     scrollbar-arrow-color: none;
+    background-color: white; /* Imposta lo sfondo bianco */
 }
 
 #in {
@@ -87,8 +88,8 @@ body {
         width: 50%; /* Rimpicciolisce ulteriormente le immagini */
     }
 }
+</style>
 
-  </style>
 <body>
 
   <center>
