--- a/Contatti.html
+++ b/Contatti.html
@@ -2,18 +2,20 @@
     #blurred-center {
         width: 100%;
         height: 100%;
-            background-color: rgba(79, 79, 79, 0.5);
-            backdrop-filter: blur(25px);
-            display: block;
-            color:white;
+        background-color: rgba(79, 79, 79, 0.5);
+        backdrop-filter: blur(25px);
+        display: block;
+        color: white;
         font-size: 1.3rem;
         font-family: 'Anton', sans-serif;
-        BORDER-RADIUS: 50PX;
-        }
+        border-radius: 50px;
+    }
 </style>
 <div id="blurred-center">
     <br>
     <h1 style="font-size: 3.5rem; margin-left: 40px">Contatti</h1>
-    <p style=" margin-left: 40px; margin-right: 40px; margin-top: 10px;">Per ogni richiesta di carattere commerciale o per eventuali domande scrivete a: <a href="mailto:info.discoveringtheuniverse@gmail.com>info.discoveringtheuniverse@gmail.com</a></p>
-       
+    <p style="margin-left: 40px; margin-right: 40px; margin-top: 10px;">
+        Per ogni richiesta di carattere commerciale per eventuali domande scrivete a: 
+        <a href="mailto:info.discoveringtheuniverse@gmail.com">info.discoveringtheuniverse@gmail.com</a>
+    </p>
 </div>
