--- a/Contatti.html
+++ b/Contatti.html
@@ -1,6 +1,6 @@
 <style>
     #blurred-center {
-        width: 100%;
+        min-width: 100%;
         height: 100%;
         background-color: rgba(79, 79, 79, 0.5);
         backdrop-filter: blur(25px);
