--- a/Home.html
+++ b/Home.html
@@ -44,7 +44,7 @@
 <script>
     var app = angular.module("myApp", ["ngRoute"]);
 
-    app.controller("MainController", function($scope, $location) {
+app.controller("MainController", function($scope, $location) {
     // Recupera lo stato dell'immagine da localStorage
     var showImageStored = localStorage.getItem('showImage');
     $scope.showImage = showImageStored === null ? true : JSON.parse(showImageStored);
@@ -55,6 +55,8 @@
     var currentPath = $location.absUrl();
     if (currentPath.includes('Home.html#!/')) {
         $scope.showImage = true;
+    } else if (currentPath.includes('chisono') || currentPath.includes('contatti') || currentPath.includes('news')) {
+        $scope.showImage = false;
     }
 
     // Funzione per nascondere l'immagine e salvare lo stato in localStorage
@@ -67,10 +69,6 @@
         localStorage.setItem('showImage', JSON.stringify($scope.showImage));
     };
 
-
-
-
-    
     // Funzione per aprire/chiudere il menù
     $scope.toggleMenu = function() {
         $scope.isMenuOpen = !$scope.isMenuOpen;
