--- a/Home.html
+++ b/Home.html
@@ -47,17 +47,18 @@
 app.controller("MainController", function($scope, $location) {
     // Recupera lo stato dell'immagine da localStorage
     var showImageStored = localStorage.getItem('showImage');
-    $scope.showImage = showImageStored === null ? true : JSON.parse(showImageStored);
+    var initialPath = $location.absUrl();
+
+    // Imposta l'immagine visibile se la pagina è home al primo caricamento
+    if (initialPath.includes('Home.html#!/')) {
+        $scope.showImage = true;
+    } else if (showImageStored !== null) {
+        $scope.showImage = JSON.parse(showImageStored);
+    } else {
+        $scope.showImage = true;
+    }
 
     $scope.isMenuOpen = false;
-
-    // Controllo dell'URL per impostare l'immagine visibile se la pagina è home
-    var currentPath = $location.absUrl();
-    if (currentPath.includes('Home.html#!/')) {
-        $scope.showImage = true;
-    } else if (currentPath.includes('chisono') || currentPath.includes('contatti') || currentPath.includes('news')) {
-        $scope.showImage = false;
-    }
 
     // Funzione per nascondere l'immagine e salvare lo stato in localStorage
     $scope.hideImage = function(clickedLink) {
@@ -68,6 +69,7 @@ app.controller("MainController", function($scope, $location) {
         }
         localStorage.setItem('showImage', JSON.stringify($scope.showImage));
     };
+
 
     // Funzione per aprire/chiudere il menù
     $scope.toggleMenu = function() {
