--- a/Contatti.html
+++ b/Contatti.html
@@ -10,6 +10,10 @@
         font-family: 'Anton', sans-serif;
         border-radius: 50px;
     }
+
+    a:hover {
+        color: B0E0E6;
+    }
 </style>
 <div id="blurred-center">
     <br>
