--- a/Contatti.html
+++ b/Contatti.html
@@ -11,6 +11,10 @@
         border-radius: 50px;
     }
 
+    a {
+    color: grey; /* Colore normale del link */
+    }
+
     a:hover {
         color: #B0E0E6;
     }
