--- a/Contatti.html
+++ b/Contatti.html
@@ -12,7 +12,7 @@
     }
 
     a {
-    color: grey; /* Colore normale del link */
+    color: white; /* Colore normale del link */
     text-decoration: none;
     }
 
