--- a/Contatti.html
+++ b/Contatti.html
@@ -24,6 +24,7 @@ a:hover {
 @media (max-width: 768px) {
     .blurred-background {
         min-height: 350px; /* Lunghezza minima */
+        height:350px;
         text-align: center; /* Centra il testo */
     }
 }
