--- a/Contatti.html
+++ b/Contatti.html
@@ -1,5 +1,5 @@
 <style>
-    #blurred-center {
+   #blurred-center {
     min-width: 100%;
     height: 100%;
     background-color: rgba(79, 79, 79, 0.5);
@@ -23,9 +23,11 @@ a:hover {
 /* Media query per schermi più piccoli di 768px */
 @media (max-width: 768px) {
     .blurred-background {
+        height: 350px; /* Altezza fissa di 350px */
         text-align: center; /* Centra il testo */
     }
 }
+
 </style>
 <div id="blurred-center">
     <br>
