--- a/Contatti.html
+++ b/Contatti.html
@@ -22,7 +22,7 @@ a:hover {
 
 /* Media query per schermi più piccoli di 768px */
 @media (max-width: 768px) {
-    .blurred-background {
+    #blurred-center {
         height: 350px; /* Altezza fissa di 350px */
         text-align: center; /* Centra il testo */
     }
