--- a/Contatti.html
+++ b/Contatti.html
@@ -1,5 +1,5 @@
 <style>
-   #blurred-center {
+   #pippo{
     min-width: 100%;
     height: 100%;
     background-color: rgba(79, 79, 79, 0.5);
@@ -22,11 +22,13 @@ a:hover {
 
 /* Media query per schermi più piccoli di 768px */
 @media (max-width: 768px) {
-    
+  #pippo{
+     height: 1200px;
+  }
 }
 
 </style>
-<div id="blurred-center">
+<div id="pippo">
     <br>
     <h1 style="font-size: 3.5rem; margin-left: 40px">Contatti</h1>
     <p style="margin-left: 40px; margin-right: 40px; margin-top: 10px;">
