--- a/Contatti.html
+++ b/Contatti.html
@@ -32,7 +32,7 @@ a:hover {
     <br>
     <h1 style="font-size: 3.5rem; margin-left: 40px">Contatti</h1>
     <p style="margin-left: 40px; margin-right: 40px; margin-top: 10px;">
-        Per ogni richiesta di carattere commerciale per eventuali domande scrivete a: 
+        Per ogni richiesta di carattere commerciale per eventuali domande scrivete a: </p><br>
         <a href="mailto:info.discoveringtheuniverse@gmail.com">info.discoveringtheuniverse@gmail.com</a>
-    </p>
+    
 </div>
