--- a/Contatti.html
+++ b/Contatti.html
@@ -11,7 +11,14 @@
     border-radius: 50px;
 }
 
+p{
+   margin-left: 40px; 
+   margin-right: 40px; 
+   margin-top: 10px;
+}
+   
 a {
+   margin-left: 40px;
     color: white; /* Colore normale del link */
     text-decoration: none;
 }
@@ -23,15 +30,20 @@ a:hover {
 /* Media query per schermi più piccoli di 768px */
 @media (max-width: 768px) {
   #pippo{
-     height: 300px;
+     height: 500px;
   }
+
+   p{
+      text-align: center;
+   }
+   
 }
 
 </style>
 <div id="pippo">
     <br>
     <h1 style="font-size: 3.5rem; margin-left: 40px">Contatti</h1>
-    <p style="margin-left: 40px; margin-right: 40px; margin-top: 10px;">
+    <p>
         Per ogni richiesta di carattere commerciale per eventuali domande scrivete a: </p><br>
         <a href="mailto:info.discoveringtheuniverse@gmail.com">info.discoveringtheuniverse@gmail.com</a>
     
