--- a/Contatti.html
+++ b/Contatti.html
@@ -27,6 +27,12 @@ a:hover {
     color: #B0E0E6;
 }
 
+h1{
+   font-size: 3.5rem; 
+   margin-left: 40px;
+}
+   
+
 /* Media query per schermi più piccoli di 768px */
 @media (max-width: 768px) {
   #pippo{
@@ -36,13 +42,17 @@ a:hover {
    p{
       text-align: center;
    }
+
+   h1{
+      text-align: center;
+   }
    
 }
 
 </style>
 <div id="pippo">
     <br>
-    <h1 style="font-size: 3.5rem; margin-left: 40px">Contatti</h1>
+    <h1>Contatti</h1>
     <p>
         Per ogni richiesta di carattere commerciale per eventuali domande scrivete a: </p><br>
         <a href="mailto:info.discoveringtheuniverse@gmail.com">info.discoveringtheuniverse@gmail.com</a>
