--- a/Contatti.html
+++ b/Contatti.html
@@ -11,7 +11,7 @@
     border-radius: 50px;
 }
 
-p{
+.p23{
    margin-left: 40px; 
    margin-right: 40px; 
    margin-top: 10px;
@@ -27,7 +27,7 @@ a:hover {
     color: #B0E0E6;
 }
 
-h1{
+.1h1{
    font-size: 3.5rem; 
    margin-left: 40px;
 }
@@ -39,11 +39,11 @@ h1{
      height: 500px;
   }
 
-   p{
+   .p23{
       text-align: center;
    }
 
-   h1{
+   .1h1{
       text-align: center;
    }
    
@@ -52,8 +52,8 @@ h1{
 </style>
 <div id="pippo">
     <br>
-    <h1>Contatti</h1>
-    <p>
+    <h1 class="1h1">Contatti</h1>
+    <p class="p23">
         Per ogni richiesta di carattere commerciale per eventuali domande scrivete a: </p><br>
         <a href="mailto:info.discoveringtheuniverse@gmail.com">info.discoveringtheuniverse@gmail.com</a>
     
