--- a/Contatti.html
+++ b/Contatti.html
@@ -17,13 +17,13 @@
    margin-top: 10px;
 }
    
-a {
+.1a {
    margin-left: 40px;
     color: white; /* Colore normale del link */
     text-decoration: none;
 }
 
-a:hover {
+.1a:hover {
     color: #B0E0E6;
 }
 
@@ -55,6 +55,6 @@ a:hover {
     <h1 class="1h1">Contatti</h1>
     <p class="p23">
         Per ogni richiesta di carattere commerciale per eventuali domande scrivete a: </p><br>
-        <a href="mailto:info.discoveringtheuniverse@gmail.com">info.discoveringtheuniverse@gmail.com</a>
+        <a class="1a" href="mailto:info.discoveringtheuniverse@gmail.com">info.discoveringtheuniverse@gmail.com</a>
     
 </div>
