--- a/Contatti.html
+++ b/Contatti.html
@@ -1,60 +1,65 @@
 <style>
-   #pippo{
-    min-width: 100%;
-    height: 100%;
-    background-color: rgba(79, 79, 79, 0.5);
-    backdrop-filter: blur(25px);
-    display: block;
-    color: white;
-    font-size: 1.3rem;
-    font-family: 'Anton', sans-serif;
-    border-radius: 50px;
-}
+        #pippo {
+            min-width: 100%;
+            height: 100%;
+            background-color: rgba(79, 79, 79, 0.5);
+            backdrop-filter: blur(25px);
+            display: block;
+            color: white;
+            font-size: 1.3rem;
+            font-family: 'Anton', sans-serif;
+            border-radius: 50px;
+        }
 
-.p23{
-   margin-left: 40px; 
-   margin-right: 40px; 
-   margin-top: 10px;
-}
-   
-.1a {
-   margin-left: 40px;
-    color: white; /* Colore normale del link */
-    text-decoration: none;
-}
+        .p23 {
+            margin-left: 40px; 
+            margin-right: 40px; 
+            margin-top: 10px;
+        }
 
-.1a:hover {
-    color: #B0E0E6;
-}
+        .link {
+            margin-left: 40px;
+            color: white; /* Colore normale del link */
+            text-decoration: none;
+        }
 
-.1h1{
-   font-size: 3.5rem; 
-   margin-left: 40px;
-}
-   
+        .link:hover {
+            color: #B0E0E6;
+        }
 
-/* Media query per schermi più piccoli di 768px */
-@media (max-width: 768px) {
-  #pippo{
-     height: 500px;
-  }
+        .header {
+            font-size: 3.5rem; 
+            margin-left: 40px;
+        }
 
-   .p23{
-      text-align: center;
-   }
+        /* Media query per schermi più piccoli di 768px */
+        @media (max-width: 768px) {
+            #pippo {
+                height: 500px;
+            }
 
-   .1h1{
-      text-align: center;
-   }
-   
-}
+            .p23 {
+                text-align: center;
+                margin-left: 15px; /* Riduce la margin-left su schermi piccoli */
+                margin-right: 15px; /* Riduce la margin-right su schermi piccoli */
+            }
 
-</style>
+            .header {
+                text-align: center;
+                /* Rimuove la margin-left su schermi piccoli */
+            }
+
+            .link {
+                /* Rimuove la margin-left su schermi piccoli */
+                display: block;
+                text-align: center;
+            }
+        }
+    </style>
 <div id="pippo">
-    <br>
-    <h1 class="1h1">Contatti</h1>
-    <p class="p23">
-        Per ogni richiesta di carattere commerciale per eventuali domande scrivete a: </p><br>
-        <a class="1a" href="mailto:info.discoveringtheuniverse@gmail.com">info.discoveringtheuniverse@gmail.com</a>
-    
-</div>
+        <br>
+        <h1 class="header">Contatti</h1>
+        <p class="p23">Per ogni richiesta di carattere commerciale per eventuali domande scrivete a:</p><br>
+        <a class="link" href="mailto:info.discoveringtheuniverse@gmail.com">info.discoveringtheuniverse@gmail.com</a>
+    </div>
+
